Add supabase support

--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,19 @@
-VALID_API_KEYS_JSON='{"SecretKey":"ClientName"}'
+# --- Database Configuration ---
+# Set to "SQLITE" for local SQLite, "SUPABASE" for Supabase
+DB_CONNECTION_TYPE="SUPABASE"
+
+# --- Supabase Connection Details ---
+# Host for the Supabase connection
+SUPABASE_HOST="YOUR_DATABASE_HOST"
+# Your actual database password
+SUPABASE_PASSWORD="YOUR_PASSWORD"
+# User for the Supabase connection
+SUPABASE_USER="SUPABASEUSER"
+# Port for the Supabase connection
+SUPABASE_PORT="5432"
+# Default Supabase database name
+SUPABASE_DB_NAME="postgres"
+
+# --- API Key Configuration ---
+# Your API keys in JSON format
+VALID_API_KEYS_JSON='{"your_actual_secret_key_1":"ClientNameA"}'
